--- a/dadi/index.html
+++ b/dadi/index.html
@@ -8,6 +8,17 @@
     <script defer src="./js/script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="buttons">
+            <button id="start">
+                START
+            </button>
+        </div>
+        <div class="results">
+            <div id="result" class="result">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
